# libPSI

./: .gitignore  CMakeLists.txt
kkrt16_client/: 10w.csv  CMakeLists.txt  inter_golden.csv  main.cpp  main.go  receiver  sender
kkrt16_lib/: CMakeLists.txt  kkrt16.cpp  kkrt16.h
kkrt16_lib/go-sdk/: go.mod  lib.go  lib_test.go
libPSI/: config.h
